--- a/Globalization/Resources/Resource.resx
+++ b/Globalization/Resources/Resource.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="EntityCreated" xml:space="preserve">
-    <value>{0} created successfully</value>
+    <value>{0} Created sucessfully</value>
   </data>
   <data name="EntityNotFound" xml:space="preserve">
-    <value>{0} not found with id {1}</value>
+    <value>{0} not found with {1}</value>
   </data>
   <data name="EntityRemoved" xml:space="preserve">
-    <value>{0} removed successfully</value>
+    <value>{0} Removed successfully</value>
   </data>
   <data name="EntityUpdated" xml:space="preserve">
-    <value>{0} updated successfully</value>
+    <value>{0} Updated sucessfully</value>
   </data>
 </root>
